--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="css/theme.css"></script>
+    <script src="css/css.css"></script>
 </head>
 <body>
 
