--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="asset/script.js"></script>
+    <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
 
