--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="asset/script.js"></script>
 
     <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/css.css">
 
 </head>
 <body>
